model outline with hyper prams

--- a/Untitled24.ipynb
+++ b/Untitled24.ipynb
@@ -12,18 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e4vF1aEOJQ-8",
-        "outputId": "44eba637-37d6-4b42-d6d0-9dffbce55c78"
+        "outputId": "1325da48-46fa-43be-ed97-00c64fdb33b7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "TensorFlow version: 2.17.1\n"
           ]
@@ -52,27 +52,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2T1pL4zYJa0t",
-        "outputId": "557d25d4-fc74-44fd-a399-8fade8e43eb7"
+        "outputId": "875c7f2e-8831-4447-9d3c-e636ef15d262"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
             "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n",
+            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2us/step\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
+            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Training images shape: (60000, 28, 28)\n",
             "Training labels shape: (60000,)\n",
             "Test images shape: (10000, 28, 28)\n",
@@ -110,18 +110,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "o1UaY9bcJltC",
-        "outputId": "7d3c5747-b32d-4071-e544-dd430958233f"
+        "outputId": "ebdecade-b580-4150-c10f-f24294bb35a4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Training set shape: (48000, 28, 28, 1)\n",
             "Validation set shape: (12000, 28, 28, 1)\n",
@@ -143,43 +143,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9rUyPPI2Mk7D",
-        "outputId": "cdae1242-bb2d-4418-845e-ec324fd1d333"
+        "outputId": "9c3652e8-4666-49ac-f2d3-0f46a2ca1689"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting keras-tuner\n",
             "  Downloading keras_tuner-1.4.7-py3-none-any.whl.metadata (5.4 kB)\n",
-            "Requirement already satisfied: keras in /usr/local/lib/python3.10/dist-packages (from keras-tuner) (3.5.0)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from keras-tuner) (24.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from keras-tuner) (2.32.3)\n",
+            "Requirement already satisfied: keras in /usr/local/lib/python3.11/dist-packages (from keras-tuner) (3.5.0)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from keras-tuner) (24.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from keras-tuner) (2.32.3)\n",
             "Collecting kt-legacy (from keras-tuner)\n",
             "  Downloading kt_legacy-1.0.5-py3-none-any.whl.metadata (221 bytes)\n",
-            "Requirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (1.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (1.26.4)\n",
-            "Requirement already satisfied: rich in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (13.9.4)\n",
-            "Requirement already satisfied: namex in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (0.0.8)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (3.12.1)\n",
-            "Requirement already satisfied: optree in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (0.13.1)\n",
-            "Requirement already satisfied: ml-dtypes in /usr/local/lib/python3.10/dist-packages (from keras->keras-tuner) (0.4.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->keras-tuner) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->keras-tuner) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->keras-tuner) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->keras-tuner) (2024.12.14)\n",
-            "Requirement already satisfied: typing-extensions>=4.5.0 in /usr/local/lib/python3.10/dist-packages (from optree->keras->keras-tuner) (4.12.2)\n",
-            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.10/dist-packages (from rich->keras->keras-tuner) (3.0.0)\n",
-            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.10/dist-packages (from rich->keras->keras-tuner) (2.18.0)\n",
-            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich->keras->keras-tuner) (0.1.2)\n",
+            "Requirement already satisfied: absl-py in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (1.4.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (1.26.4)\n",
+            "Requirement already satisfied: rich in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (13.9.4)\n",
+            "Requirement already satisfied: namex in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (0.0.8)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (3.12.1)\n",
+            "Requirement already satisfied: optree in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (0.14.0)\n",
+            "Requirement already satisfied: ml-dtypes in /usr/local/lib/python3.11/dist-packages (from keras->keras-tuner) (0.4.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->keras-tuner) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->keras-tuner) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->keras-tuner) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->keras-tuner) (2024.12.14)\n",
+            "Requirement already satisfied: typing-extensions>=4.5.0 in /usr/local/lib/python3.11/dist-packages (from optree->keras->keras-tuner) (4.12.2)\n",
+            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.11/dist-packages (from rich->keras->keras-tuner) (3.0.0)\n",
+            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.11/dist-packages (from rich->keras->keras-tuner) (2.18.0)\n",
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.11/dist-packages (from markdown-it-py>=2.2.0->rich->keras->keras-tuner) (0.1.2)\n",
             "Downloading keras_tuner-1.4.7-py3-none-any.whl (129 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading kt_legacy-1.0.5-py3-none-any.whl (9.6 kB)\n",
             "Installing collected packages: kt-legacy, keras-tuner\n",
             "Successfully installed keras-tuner-1.4.7 kt-legacy-1.0.5\n"
@@ -199,14 +199,108 @@
       "source": [
         "# **CNN Arch**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%matplotlib inline\n",
+        "import keras_tuner as kt\n",
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from tensorflow.keras import Input, Model, layers\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
+      ],
+      "metadata": {
+        "id": "Jf-zfIs3Q6pm"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat','Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n"
+      ],
+      "metadata": {
+        "id": "gXW2HkS8Q7l0"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FashionHyperModel(kt.HyperModel):\n",
+        "    def build(self, hp):\n",
+        "        inputs = Input(shape=(28, 28, 1))\n",
+        "        x = inputs\n",
+        "        num_blocks = hp.Int('num_blocks', 2, 4)\n",
+        "        conv_units = hp.Int('conv_units', 32, 128, step=32)\n",
+        "        kernel_size = hp.Choice('kernel_size', [3, 5])\n",
+        "        use_attention = hp.Boolean('attention')\n",
+        "        dropout_rate = hp.Float('dropout', 0.1, 0.5, step=0.1)\n",
+        "        self.batch_size = hp.Int('batch_size', 128, 512, step=128)\n",
+        "        for i in range(num_blocks):\n",
+        "            x = layers.Conv2D(\n",
+        "                conv_units * (2**i),\n",
+        "                kernel_size,\n",
+        "                activation='relu',\n",
+        "                padding='same',\n",
+        "                kernel_regularizer=tf.keras.regularizers.l2(hp.Float('l2', 1e-5, 1e-3))\n",
+        "            )(x)\n",
+        "            x = layers.BatchNormalization()(x)\n",
+        "            if use_attention:\n",
+        "                attention = layers.GlobalAveragePooling2D()(x)\n",
+        "                attention = layers.Dense(conv_units//4, activation='relu')(attention)\n",
+        "                attention = layers.Dense(x.shape[-1], activation='sigmoid')(attention)\n",
+        "                x = layers.Multiply()([x, attention])\n",
+        "            x = layers.MaxPooling2D(2)(x)\n",
+        "            x = layers.Dropout(dropout_rate)(x)\n",
+        "        x = layers.Conv2D(\n",
+        "            hp.Int('viz_filters', 32, 128, step=32),\n",
+        "            (3,3),\n",
+        "            activation='relu',\n",
+        "            padding='same',\n",
+        "            name='feature_maps'\n",
+        "        )(x)\n",
+        "        x = layers.GlobalAveragePooling2D()(x)\n",
+        "        x = layers.Dense(\n",
+        "            hp.Int('dense_units', 128, 512, step=128),\n",
+        "            activation='relu'\n",
+        "        )(x)\n",
+        "        x = layers.Dropout(dropout_rate)(x)\n",
+        "        outputs = layers.Dense(10, activation='softmax')(x)\n",
+        "        model = Model(inputs, outputs)\n",
+        "        model.compile(\n",
+        "            optimizer=tf.keras.optimizers.get(\n",
+        "                hp.Choice('optimizer', ['adam', 'rmsprop', 'nadam'])\n",
+        "            ),\n",
+        "            loss='sparse_categorical_crossentropy',\n",
+        "            metrics=['accuracy']\n",
+        "        )\n",
+        "        return model\n",
+        "\n",
+        "    def fit(self, hp, model, *args, **kwargs):\n",
+        "        return model.fit(\n",
+        "            *args,\n",
+        "            batch_size=self.batch_size,\n",
+        "            **kwargs\n",
+        "        )\n"
+      ],
+      "metadata": {
+        "id": "2Xqh7pckRCvc"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
     "colab": {
-      "gpuType": "V28",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVdXbpodltC6HU6C6hi3ld",
+      "authorship_tag": "ABX9TyNGyFgacD2UqPx0AJdt9rnj",
       "include_colab_link": true
     },
     "kernelspec": {
